[package]
name = "secp256k1_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly port of Secp256k1"
repository = "https://github.com/hazae41/secp256k1.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa", "alloc"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }
memory_wasm = { path = "../../node_modules/@hazae41/memory.wasm/dist/wasm"}
